--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <!-- Header -->
+  <header class="header">
+    <h1>Shaw's News</h1>
+  </header>
+
+  <!-- Main Layout -->
+  <div class="container">
+
+    <!-- Latest News Section -->
+    <div class="latest-news-section">
+      <h3>Latest News Articles</h3>
+      <ul>
+        <li>Article 1</li>
+        <li>Article 2</li>
+        <li>Article 3</li>
+      </ul>
+    </div>
+
+    <!-- Main Article -->
+    <div class="main-article">
+      <h2>Main Article</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Sed auctor, magna eu fringilla malesuada, ipsum risus eleifend est,
+        non feugiat quam augue euismod eros. Sed malesuada, magna eu
+        fringilla malesuada, ipsum risus eleifend est, non feugiat
+        quam augue euismod eros.
+      </p>
+    </div>
+
+    <!-- Pictorial News Section -->
+    <div class="pictorial-news-section">
+      <h3>Pictorial News</h3>
+      <img src="https://via.placeholder.com/200x120" alt="News 1">
+      <img src="https://via.placeholder.com/200x120" alt="News 2">
+      <img src="https://via.placeholder.com/200x120" alt="News 3">
+    </div>
+
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
